--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@t3-oss/env-nextjs": "^0.13.4",
     "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.21.3",
-    "ai": "^4.1.47",
+    "@tavily/core": "^0.5.1",
+    "ai": "^4.3.13",
     "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
